Update to Now v2

--- a/now.json
+++ b/now.json
@@ -1,3 +1,5 @@
 {
-    "alias": "https://ilokivi-scraper.now.sh"
+  "version": 2,
+  "alias": "https://ilokivi-scraper.now.sh",
+  "builds": [{ "src": "*.js", "use": "@now/node" }]
 }
