--- a/now.json
+++ b/now.json
@@ -8,5 +8,9 @@
       "use": "@now/node-server",
       "config": { "maxLambdaSize": "20mb" }
     }
-  ]
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "index.js" }],
+  "github": {
+    "silent": true
+  }
 }
